# ShitEngineWithSDK

./: .gitignore  BUILD_RELEASE.BAT  CMakeLists.txt  LICENSE  README.md
MayGame/: CMakeLists.txt
MayGame/Package/: CMakeLists.txt  kcache.json
MayGame/Package/lua/script/: mobdebug.lua  shitenv.lua
MayGame/Package/res/pipeline/: main.json  shader.json
MayGame/Package/res/script/: mobdebug.luac  shitenv.luac
MayGame/Package/res/shader/: shape.vert  texture.vert
MayGame/Package/shit/shit/: main.shit
MayGame/Package/shit/shit/snake/: controller.shit  snake_scene.shit
MayGame/Package/shit/shit/tentacle/: second_order_dynamics.shit  tentacle_root.shit  tentacle_scene.shit  v3_dyns.shit
MayGame/Package/shit/shit/test_scene/: test_scene.shit
MayGame/ext/ShitLang/: CMakeLists.txt
MayGame/ext/ShitLang/lua/: lauxlib.c  lbaselib.c  llex.c  ltm.c
MayGame/ext/ShitLang/shitenv/: shitenv.lua
MayGame/ext/ShitLang/test/: test.shit
MayGame/ext/ShitLang/tool/: compiler.cpp  tool.cpp
MayGame/src/: gameMain.cpp  loadShit.cpp  loadShit.h
MayGame/src/res/: res.cpp  res.h
ShitEditor/: CMakeLists.txt
ShitEditor/Package/: CMakeLists.txt  kcache.json  pri.key  pub.key
ShitEditor/Package/res/pipeline/: bunch.json  imgui_bunch.json  imgui_side.json  main.json
ShitEditor/Package/res/shader/: shape.frag  texture.frag
ShitEditor/ext/MobDebugCppServer/: .gitignore  CMakeLists.txt
ShitEditor/ext/MobDebugCppServer/include/: mobdebug_server.h  mobdebug_types.h
ShitEditor/ext/MobDebugCppServer/src/: mobdebug_server.cpp
ShitEditor/ext/MobDebugCppServer/test/: main.cpp
ShitEditor/src/: exit.cpp  exit.h  main.cpp  res.cpp  res.h  resize.cpp  resize.h
ShitEditor/src/editor/: editorImGui.cpp  editorImGui.h  editorImGuiDebugger.cpp  editorImGuiExplorer.cpp  editorImGuiStaticInfo.h  editorImGuiTools.cpp  editorScene.cpp  editorScene.h  keyTable.h
ShitEditor/src/editor/ext/: TextEditor.cpp  TextEditor.h
doc/: Pipeline配置文件结构.md  ShitLang API映射列表.md
ext/include/mayEngine/: mayArray.h  mayCamera.h  mayComponent.h  mayDebug.h  mayDefine.h  mayEngine.h  mayEngineAll.h  mayEntry.h  mayExport.h  mayGlobal.h  mayGraphic.h  mayNode.h  mayRef.h  mayResourseManager.h  mayScene.h  maySprite.h  mayStaticNodeTree.h  mayStdExport.h  mayStlDefine.h  mayText.h  mayType.h  mayUtils.h  mayValue.h  mayValueMap.h  mayVec3.h
ext/include/mayEngine/audio/: mayAudio.h  mayAudioFilter.h
ext/include/mayEngine/components/UI/: buttonComponent.h  touchButtonComponent.h
ext/include/mayEngine/components/game/ecs/: mayEcsComponent.h
ext/include/mayEngine/components/game/lua/: mayLuaComponent.h
ext/include/mayEngine/components/game/physics/: mayPhysicsWorldComponent.h
ext/include/mayEngine/components/rend/: mayCircleComponent.h  mayLineComponent.h  mayRectangleComponent.h  maySpriteComponent.h  mayTextComponent.h
ext/include/mayEngine/components/rend/base/: mayRendComponentBase.h
ext/include/mayEngine/components/tools/imgui/: MayImGuiComponent.h
ext/include/mayEngine/ecs/: mayEcsDefine.h
ext/include/mayEngine/graphic/: mayComputeShader.h  mayGraphicTask.h
ext/include/mayEngine/graphic/mesh/: mayRenderMesh.h  mayRenderMeshDataLayout.h
ext/include/mayEngine/graphic/rqtask/: mayRQTask.h
ext/include/mayEngine/graphic/tasks/: taskCopy.h  taskCustomCall.h  taskShape.h  taskTexture.h
ext/include/mayEngine/memory/: mayMemory.h  mimalloc.h
ext/include/mayEngine/nodes/: mayRigidBodyNode.h
ext/include/mayEngine/physics/: mayPhyiscsShapeBase.h  mayPhysicsDefine.h  mayPhysicsShapeBox.h  mayPhysicsShapeCircle.h
ext/include/mayEngine/presets/: note.md
ext/include/mayEngine/sprite/: mayBunchSprite.h  mayPlaceholderSprite.h  maySharedSprite.h  maySprite.h  maySpriteBase.h
ext/include/mayEngine/system/: mayScreen.h
ext/include/mayEngine/system/IO/: mayClipboard.h  mayInput.h
ext/include/mayEngine/system/lua/: mayLua.h
ext/include/mayEngine/tools/imgui/: imconfig.h  imgui_stdlib.h  mayImguiUtils.h
ext/lib/Debug/: MayEngine.lib
ext/lib/RelWithDebInfo/: MayEngine.lib
ext/lib/Release/: MayEngine.lib
ext/lua/: CMakeLists.txt
ext/lua/lua/: llex.c  llex.h  lparser.c
tools/: createPackage.bat
