cmake_minimum_required(VERSION 3.17)

project(ShitWithSDK)

if (WIN32)
    set(CMAKE_SYSTEM_VERSION 10.0.19041.0)
    set(CMAKE_WINDOWS_KITS_10_DIR "C:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0")
endif ()

option(CMAKE_BUILD_TYPE "CMake build type." "Debug")

if (MSVC)
    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" OR ${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo")
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDebug")
    else ()
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
    endif ()
    set(MSVC_OPTIMIZE_FLAGS "/GL /Oi /arch:AVX2")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MSVC_OPTIMIZE_FLAGS}")
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${MSVC_OPTIMIZE_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8")
endif ()

if (UNIX AND NOT ANDROID)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
    set(CMAKE_CXX_EXTENSIONS OFF)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-null-dereference -Wno-inconsistent-missing-override")
endif ()

if (ANDROID)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-null-dereference -Wno-inconsistent-missing-override")
endif ()

if (EMSCRIPTEN)
    set(ME_WASM_EXTRA_FLAGS "-sUSE_PTHREADS=1 -sWASM_WORKERS=1 -pthread")
    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" OR ${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo")
        set(ME_WASM_EXTRA_FLAGS "${ME_WASM_EXTRA_FLAGS} -g")
    endif ()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ME_WASM_EXTRA_FLAGS}")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ME_WASM_EXTRA_FLAGS}")
endif ()

if (WIN32)
    file(COPY "${CMAKE_SOURCE_DIR}/tools/ShitCompilerTool.exe" DESTINATION ${CMAKE_BINARY_DIR}/bin/Package)
    file(COPY "${CMAKE_SOURCE_DIR}/tools/ShitCompiler.exe" DESTINATION ${CMAKE_BINARY_DIR}/bin/Package)
    file(COPY "${CMAKE_SOURCE_DIR}/tools/MayPack.exe" DESTINATION ${CMAKE_BINARY_DIR}/bin/Package)
    file(COPY "${CMAKE_SOURCE_DIR}/tools/createPackage.bat" DESTINATION ${CMAKE_BINARY_DIR}/bin)
    file(GLOB DEP_FILES "${CMAKE_SOURCE_DIR}/ext/bin/Common/*.dll")
    foreach (DFILE IN LISTS DEP_FILES)
        file(COPY ${DFILE} DESTINATION ${CMAKE_BINARY_DIR}/bin)
    endforeach ()
    file(GLOB DEP_FILES "${CMAKE_SOURCE_DIR}/ext/bin/Common/lua/*.lua")
    foreach (DFILE IN LISTS DEP_FILES)
        file(COPY ${DFILE} DESTINATION ${CMAKE_BINARY_DIR}/bin/lua)
    endforeach ()
    file(GLOB DEP_FILES "${CMAKE_SOURCE_DIR}/ext/bin/Common/lua/socket/*")
    foreach (DFILE IN LISTS DEP_FILES)
        file(COPY ${DFILE} DESTINATION ${CMAKE_BINARY_DIR}/bin/lua/socket)
    endforeach ()
    file(GLOB DEP_FILES "${CMAKE_SOURCE_DIR}/ext/bin/Common/lua/mime/*.dll")
    foreach (DFILE IN LISTS DEP_FILES)
        file(COPY ${DFILE} DESTINATION ${CMAKE_BINARY_DIR}/bin/lua/mine)
    endforeach ()
    file(GLOB DEP_FILES "${CMAKE_SOURCE_DIR}/ext/bin/${CMAKE_BUILD_TYPE}/*")
    foreach (DFILE IN LISTS DEP_FILES)
        file(COPY ${DFILE} DESTINATION ${CMAKE_BINARY_DIR}/bin)
    endforeach ()
endif ()

add_subdirectory(ext/boost)
add_subdirectory(ext/lua)
add_subdirectory(MayGame)
add_subdirectory(ShitEditor)
